# Waddle

./: .env  .env.example  README.md  main.py  project.md  pyproject.toml  resume.md
migrations/: env.py
migrations/versions/: 10d27a813da2_init.py  2180a2791721_add_role_to_users_table.py  939db95664f6_add_user_uid_foreignkey_to_books.py  c2d010de1216_add_book_tags_table.py  dc91c9f07a0e_add_reviews_table.py
src/: config.py  errors.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: schemas.py  service.py
src/tags/: routes.py  service.py
